<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>com.qcharge</groupId>
    <artifactId>openadr-service</artifactId>
    <version>1.0.0</version>
    <name>openadr-service</name>
    <description>OpenADR VEN service</description>
    <packaging>jar</packaging>

    <properties>
        <start-class>com.qcharge.openadr.OpenAdrServiceApplication</start-class>
        <java.version>21</java.version>
        <lombok.version>1.18.36</lombok.version>

        <spring-cloud.version>2024.0.1</spring-cloud.version>
    </properties>

    <dependencies>
        <!-- REST API -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Health checks / metrics -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Feign clients for calls to other QCharge services -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-openfeign</artifactId>
        </dependency>

        <!-- Validation -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Database / JPA -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- MySQL -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Flyway migrations for MySQL -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
        </dependency>

        <!-- JAXB API -->
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>

        <!-- JAXB runtime -->
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
        </dependency>

        <!-- XML Security for RSA signature OpenADR payloads -->
        <dependency>
            <groupId>org.apache.santuario</groupId>
            <artifactId>xmlsec</artifactId>
            <version>3.0.3</version>
        </dependency>

        <!-- Lombok API -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>

        <!-- Utils -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <!-- Java time support for Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>

                <configuration>
                    <mainClass>
                        com.qcharge.openadr.OpenAdrServiceApplication
                    </mainClass>

                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>

                <configuration>

                    <release>${java.version}</release>

                    <annotationProcessorPaths>

                        <!-- Lombok processor -->
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>

                    </annotationProcessorPaths>

                </configuration>
            </plugin>

            <!--
                        <plugin>
                            <groupId>org.jvnet.jaxb</groupId>
                            <artifactId>jaxb-maven-plugin</artifactId>
                            <version>4.0.8</version>

                            <executions>
                                <execution>
                                    <id>generate-openadr-sources</id>

                                    <goals>
                                        <goal>generate</goal>
                                    </goals>

                                    <configuration>
                                        <schemaDirectory>
                                            ${project.basedir}/src/main/resources/xsd
                                        </schemaDirectory>

                                        <generateDirectory>
                                            ${project.build.directory}/generated-sources/jaxb
                                        </generateDirectory>

                                        <generatePackage>
                                            com.qcharge.openadr.model.oadr20b
                                        </generatePackage>

                                        <strict>false</strict>
                                        <extension>true</extension>

                                        <args>
                                            <arg>-nv</arg>
                                            <arg>-XautoNameResolution</arg>
                                        </args>
                                    </configuration>

                                </execution>
                            </executions>
                        </plugin>
            -->

        </plugins>
    </build>

    <profiles>

        <profile>
            <id>local</id>

            <properties>
                <envName>local</envName>
                <skipTests>true</skipTests>
                <finalversion>1.0.0-local</finalversion>
                <maven-properties.file>
                    src/main/resources/application-local.properties
                </maven-properties.file>
                <spring.profiles.active>local</spring.profiles.active>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>

                        <configuration>
                            <profiles>
                                <profile>local</profile>
                            </profiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>test</id>

            <properties>
                <envName>test</envName>
                <skipTests>true</skipTests>
                <finalversion>1.0.0-test</finalversion>
                <maven-properties.file>
                    src/main/resources/application-test.properties
                </maven-properties.file>
            </properties>
        </profile>

        <profile>
            <id>dev</id>

            <properties>
                <envName>dev</envName>
                <skipTests>true</skipTests>
                <finalversion>1.0.0-dev</finalversion>
                <maven-properties.file>
                    src/main/resources/application-dev.properties
                </maven-properties.file>
            </properties>
        </profile>

        <profile>
            <id>prod</id>

            <properties>
                <envName>prod</envName>
                <skipTests>true</skipTests>
                <finalversion>1.0.0-prod</finalversion>
                <maven-properties.file>
                    src/main/resources/application-prod.properties
                </maven-properties.file>
            </properties>
        </profile>

    </profiles>

</project>
